<resources>
    <string name="app_name">ShareCam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- invite -->
    <string name="sms_invite_msg">쉐어캠 초대 메세지</string>

    <!-- dialog -->
    <string name="add_indiviudal_camera_shortcut">공유 카메라 홈 화면에 추가</string>
    <string name="add_individual_album_shortcut">공유 앨범 홈 화면에 추가</string>
    <string name="take_picture">사진 촬영</string>
    <string name="load_from_album">사진 앨범에서 선택</string>
    <string name="basic_picture">기본 사진</string>
    <string name="phone_verify_message_sent">인증번호가 전송 되었습니다. 확인 후 입력해 주세요 (5분간 유호합니다.)</string>
    <string name="accept">확인</string>
    <string name="cancel">취소</string>
    <string name="invite">초대하기</string>
    <string name="add_to_home">홈 화면에 추가</string>

    <!-- toast server error -->
    <string name="invalid_session_token">다른 기기에서 접속하였거나 문제가 발생하였습니다. 앱 삭제 후 재설치해 주세요</string>
    <string name="network_unavailable">네트워크 상태를 확인해 주세요.</string>
    <string name="verification_number_not_matched">입력하신 인증번호가 옳지 않습니다.</string>
    <string name="unknown_error_code">네트워크 연결 상태를 확인해 주세요</string>
    <string name="invalid_phone">전화번호가 옳지 않습니다.</string>
    <string name="phone_already_exist">전화번호로 가입한 회원이 이미 존재합니다.</string>
    <string name="continuous_attempts_not_allowed">이미 요청하였습니다. 1분 후에 다시 시도해 주세요</string>
    <string name="save_picture_success">사진 저장이 완료되었습니다.</string>
    <string name="save_picture_fail">사진 저장을 실패하였습니다.</string>
    <!--<string name="facebook_invalid_access_token">페이스북 로그인에 실패하였습니다.</string>-->

    <!-- toast-->
    <string name="not_availalbe_click_while_taking_picture_toast">촬영 중에는 클릭할 수 없습니다.</string>
    <string name="you_should_fill_out">입력을 완료해야 합니다.</string>
    <string name="phone_format_invalid">전화번호의 형식이 올바르지 않습니다.</string>
    <string name="all_pictures_exipired">모든 사진들이 만료되었습니다.</string>
    <string name="start_download">다운로드를 시작합니다.</string>

    <!-- facebook -->
    <string name="facebook_app_id">912014918837079</string>

    <!-- login -->
    <string name="login_name_hint">이름</string>
    <string name="login_edittext_phone_hint">전화번호</string>
    <string name="login_phone_verify_hint">인증 번호</string>
    <string name="login_phone_verify_btn">인증번호받기</string>
    <string name="next">다음</string>
    <string name="without_phone_verify">휴대폰 인증 없이 진행</string>
    <!-- cameraActivity -->

    <string name="title_activity_picture_modify">PictureModifyActivity</string>

    <string name="toast_delete_picture">사진을 삭제하였습니다.</string>
    <string name="title_activity_login">LoginActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_share">ShareActivity</string>

    <string name="private_tab">개인</string>
    <string name="group_tab">그룹</string>
    <string name="channel_tab">채널</string>

    <string name="recommend_tab">추천</string>
    <string name="contact_tab">연락처</string>
    <string name="sharecam_tab">쉐어캠</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- IndividualFragment -->
    <string name="existing_sharecam_friend">쉐어캠에 있어요</string>
    <string name="not_exisiting_sharecam_friend">쉐어캠에 아직 없어요</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_upload">UploadActivity</string>


    <!-- AlbumActivity -->

    <!--notification-->
    <string name="uploading_and_standby">업로드/대기</string>
    <string name="success">완료</string>
    <string name="fail">실패</string>
    <string name="notification_uploading_state">개가 업로드 중입니다.</string>
    <string name="notification_upload_fail_state">개가 업로드 실패하였습니다.</string>
    <string name="notification_upload_standby_state">개가 업로드 대기 중 입니다.</string>
    <string name="notification_upload_success_state">모두 업로드 완료되었습니다.</string>

    <!-- UploadingActivity -->

    <string name="uploading">업로딩</string>
    <string name="success_uploading">업로드 완료</string>
    <string name="failed_uploading_state">업로드 실패</string>
    <string name="standby_uploading_state">업로드 대기 중</string>
    <string name="uploading_state">업로드 중</string>
    <string name="success_uploading_state">업로드 성공</string>
    <string name="finished_uploading_state">업로드 완료</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="share_contact_num_transfer">개의 연락처에 전송 </string>
    <string name="share_group_num_transfer">개의 그룹에 전송</string>
    <string name="delete_all_success_upload">전송 완료 삭제</string>

    <!-- Config -->
    <string name="basic_auto_download_config">기본 자동 저장 활성화</string>
    <string name="individual_info">개인 정보</string>
    <string name="alarm_config">알림 설정</string>
    <string name="auto_down">자동 저장</string>
    <string name="auto_save_config">자동 저장 설정</string>
    <string name="auto_save_mode">자동 저장 모드</string>
    <string name="auto_download_individual">새로운 개인 앨범 자동 저장</string>
    <string name="auto_download_group">새로운 그룹 앨범 자동 저장</string>
    <string name="config_account">계정 설정</string>
    <string name="registered">등록됨</string>
    <string name="not_registered">등록 안됨</string>
    <string name="facebook">페이스북</string>
    <string name="connected_devices">접속중인 기기</string>
    <string name="manage_friend">친구 관리</string>
    <string name="sync_friend">친구 동기화</string>
    <string name="final_sync_time">최종 동기화 시간</string>
    <string name="alarm">알림</string>
    <string name="alarm_mode">알림 모드</string>
    <string name="sound_and_vibration">소리와 진동</string>
    <string name="vibration">진동</string>
    <string name="mute">무음</string>
    <string name="only_wifi">Wifi에서만</string>
    <string name="whenever">항상</string>
    <string name="no_config">설정 안됨</string>
    <string name="individual_and_group">개인, 그룹</string>
    <string name="individual">개인</string>
    <string name="group">그룹</string>
    <string name="notice">공지사항</string>
    <string name="app_info">앱 정보</string>
    <string name="sign_out">회원 탈퇴</string>


    <!--dialog -->
    <string name="sign_out_dialog_text">회원 탈퇴시 공유 사진, 그룹 목록 등 모두 삭제됩니다.</string>
    <string name="title_activity_image_view">ImageViewActivity</string>



    <!-- Notification -->
    <string name="notification_got_picture">님꼐서 사진을 공유하였습니다.</string>

    <!-- actionbar title -->
    <string name="title_configuration">설정</string>
    <string name="title_notification">알림</string>

    <!-- album config -->
    <string name="member">멤버</string>
    <string name="shortcut_icon">바로가기 아이콘</string>
    <string name="group_config">그룹 설정</string>
    <string name="all_download">모두 저장</string>
    <string name="leave_album">앨범 나가기</string>

    <!-- word -->
    <string name="download">다운로드</string>
    <string name="stop">중지</string>

</resources>
