<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.claude.sharecam.config.ConfigFragment"
    android:orientation="vertical">

    <TextView
        android:text="@string/individual_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/configProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:src="@mipmap/profile"
            android:id="@+id/configProfileImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <TextView
            android:layout_toRightOf="@id/configProfileImg"
            android:id="@+id/configUserName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_action_accept"
            android:id="@+id/modifyUserBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!-- 게정 설정 (임시 삭제) -->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/configAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:text="@string/config_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_action_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:id="@+id/connectedDevicesLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:text="@string/connected_devices"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<ImageView-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:src="@mipmap/ic_action_accept"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</RelativeLayout>-->
    <!--친구 관리 -->
    <RelativeLayout
        android:id="@+id/manageFriendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/manage_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_action_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:text="@string/basic_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--알람 설정-->
    <RelativeLayout
        android:id="@+id/alarmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/alarm_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_action_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <!-- -->
    <RelativeLayout
        android:id="@+id/autoSaveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/auto_save_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_action_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/noticeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/appInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signOutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
