<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.claude.sharecam.config.ModifyPhoneFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/loginLayout"
        android:orientation="vertical"
        >


        <Spinner
            android:background="@color/login_spinner_bg"
            android:id="@+id/mpCountryCodeSpinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height" />


        <EditText
            style="@style/editText"
            android:id="@+id/mpPhoneNumberTxt"
            android:hint="@string/login_edittext_phone_hint"
            android:layout_marginTop="@dimen/normal_top_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height" />

        <RelativeLayout
            android:layout_marginTop="@dimen/normal_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/textViewBtn"
                android:id="@+id/mpPhoneVerifyNumBtn"
                android:layout_alignParentRight="true"
                android:text="@string/login_phone_verify_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edittext_height" />
            <EditText
                android:layout_marginRight="@dimen/normal_side_margin"
                style="@style/editText"
                android:id="@+id/mpPhoneVerifyNumTxt"
                android:hint="@string/login_phone_verify_hint"
                android:layout_toLeftOf="@id/mpPhoneVerifyNumBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/mpPhoneVerifyNextBtn"
            android:layout_marginTop="80dp"
            android:text="@string/next"
            style="@style/textViewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</FrameLayout>
