<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"

    >
    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/upload_noti_text_color"
        android:text="@string/uploading_and_standby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/upload_noti_text_color"
        android:id="@+id/uploadingNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/upload_noti_text_color"
        android:text="@string/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/upload_noti_text_color"
        android:id="@+id/successNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/upload_noti_text_color"
        android:text="@string/fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/upload_noti_text_color"
        android:id="@+id/failNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>