<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.claude.sharecam.main.AlbumActivity"
    android:id="@+id/albumDrawerLayout"

    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            layout="@layout/actionbar_layout"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/albumContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--<com.claude.sharecam.view.SlidingTabLayout-->
                <!--android:id="@+id/mainSlidingTabs"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->
                <!--<android.support.v4.view.ViewPager  android:id="@+id/mainPager"-->
                <!--android:layout_width="match_parent" android:layout_height="match_parent"-->
                <!--tools:context="com.claude.sharecam.share.ShareActivity" >-->
                <!--</android.support.v4.view.ViewPager>-->
            </FrameLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/albumProgressLayout"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>



    <!-- Navigation Drawer -->
    <RelativeLayout
        android:background="#FFFFFF"

        android:id="@+id/albumDrawer"
        android:layout_gravity="end"
        android:layout_width="240dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 알림 / 자동 저장 설정 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/alarmSetLayout"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/ic_action_accept"
                        android:id="@+id/alarmBtnImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/alarm"
                        android:id="@+id/alarmBtnTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/autoDownSetLayout"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/ic_action_accept"
                        android:id="@+id/autoDownBtnImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/auto_down"
                        android:id="@+id/autoDownTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <!-- 멤버 -->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/memberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <!-- 바로가기 아이콘 -->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/shortcutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/shortcut_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!-- 그룹 설정 -->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/groupConfigLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/group_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!-- 모두 저장 -->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/allDownLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/all_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/leaveAlbumLayout"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/leave_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
